--- a/package.json
+++ b/package.json
@@ -7,6 +7,11 @@
     "preview": "nuxt preview"
   },
   "devDependencies": {
-    "nuxt": "3.0.0-rc.3"
+    "nuxt": "3.0.0-rc.3",
+    "sass": "^1.52.2"
+  },
+  "dependencies": {
+    "@inkline/inkline": "^3.0.8",
+    "@inkline/nuxt": "^3.1.0"
   }
 }
